2004-03-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* type-break.el (type-break-emacs-variant): Remove.
	(type-break-run-at-time, type-break-cancel-function-timers):
	Use fboundp rather than version name and number.

2004-03-09  Masatake YAMATO  <jet@gyve.org>

	* hexl.el (hexl-mode): Use `make-local-variable' instead of
	`make-variable-buffer-local'.

2004-03-08  Michael Albinus  <Michael.Albinus@alcatel.de>

	* find-dired.el (find-dired): Call `shell-command' instead of
	`start-process-shell-command'.  By this, Tramp takes over
	handling of remote directories.

2004-03-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* cus-edit.el (fill) <defgroup>: Move to fill.el.

	* textmodes/fill.el (fill) <defgroup>: Move from cus-edit.el.
	(enable-kinsoku): Make it a defcustom.
	(fill-comment-paragraph): Don't rely on fill-prefix to bound the
	paragraph to same-comment-start-marker.

2004-03-07  Dave Love  <fx@gnu.org>

	* net/browse-url.el (rfc2368-parse-mailto-url): Autoload.
	(browse-url-mail): Use it.

	* mail/rfc2368.el (rfc2368-unhexify-char): Delete.
	(rfc2368-unhexify-string): Use replace-regexp-in-string.

2004-03-07  Francis J. Wright  <F.J.Wright@qmul.ac.uk>

	* woman.el (woman-man.conf-path): Doc fix.
	(woman-parse-man.conf): Also parse OPTIONAL_MANPATH.

2004-03-07  Eli Zaretskii  <eliz@elta.co.il>

	* sort.el (sort-columns): Remove ms-dos from the list of systems
	where the external `sort' command is not used.

2004-03-07  Kim F. Storm  <storm@cua.dk>

	* gdb-ui.el (gdb-overlay-arrow-position): Add defvar.
	(gdb-reset): Reset gdb-overlay-arrow-position marker and remove it
	from overlay-arrow-variable-list.
	(gdb-assembler-mode): Use add-to-list for gdb-overlay-arrow-position.

2004-03-06  Nick Roberts  <nick@nick.uklinux.net>

	* gdb-ui.el (gdb-assembler-mode, gdb-assembler-custom): Set up
	overlay arrow string properly for the assembler buffer.

2004-03-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mail/sendmail.el (mail-mode): Fix last change.
